# novi-py

./: .gitignore  README.md  gen-proto.sh  pyproject.toml
src/novi/: __init__.py  client.py  errors.py  file.py  identity.py  misc.py  model.py  novi_pb2.py  novi_pb2.pyi  novi_pb2_grpc.py  object.py  plugin.py  session.py
src/novi/aio/: __init__.py  client.py  object.py  session.py
src/novi/proto/: novi_pb2.py  novi_pb2.pyi  novi_pb2_grpc.py
