[project]
name = "novi-py"
version = "0.1.0"
description = "Python client for Novi"
authors = [
    { name = "mivik", email = "mivik@qq.com" }
]
dependencies = [
    "uuid>=1.30",
    "grpcio-status>=1.60.0",
    "pydantic>=2.7.1",
    "grpcio>=1.60.0",
    "pyyaml>=6.0.1",
    "structlog>=24.2.0",
    "aiohttp>=3.9.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "grpcio-tools>=1.64.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/novi"]

[tool.ruff.lint]
extend-select = ["UP"]
exclude = ["novi_pb2*"]
